--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,3 +150,11 @@ body{
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ccc' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
+
+#copy{
+    display: inline;
+    margin-left: 5px;
+}
+#url-example-p{
+    display: inline;
+}
